--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.indo.portal</groupId>
-    <artifactId>fintopia-indo-common</artifactId>
+    <artifactId>kneotrino-indo-common</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
